gui/IRPMonDll.pas


  TFastIoSettings = Packed Array [0..Ord(FastIoMax) - 1] Of Byte;
  PFastIoSettings = ^TFastIoSettings;
  TIRPSettings = Packed Array [0..$1B] Of Byte;
  PIRPSettings = ^TIRPSettings;

  (** Contains information about one device monitored by the IRPMon driver. *)
  _HOOKED_DEVICE_UMINFO = Record
	  (** ID of the object, used within the IRPMon driver. *)
    ObjectId : Pointer;
	  (** Address of device's DEVICE_OBJECT structure. *)
	  DeviceObject : Pointer;
	  (** Name of the hooked device. Can never be NULL. *)
	  DeviceName : PWideChar;
	  (** Length of the device name, in bytes. The value does not include the
	    terminating null character. *)
    DeviceNameLen : Cardinal;
	  (** Indicates which types of fast I/O requests are monitored. THe exact
	   meaning of each entry is still undefined. *)
    FastIoSettings : TFastIoSettings;
	  (** Indicates which types of IRP requests are monitored. THe exact
	   meaning of each entry is still undefined.
	   NOTE: 0x1b = IRP_MJ_MAXIMUM_FUNCTION. *)
	  IRPSettings : TIRPSettings;
	  (** Indicates whether the monitoring is active for the device. *)
    MonitoringEnabled : ByteBool;
    end;
  HOOKED_DEVICE_UMINFO = _HOOKED_DEVICE_UMINFO;
  PHOOKED_DEVICE_UMINFO = ^HOOKED_DEVICE_UMINFO;

  _IRP_SETTINGS = Record
    Settings : Array [0..$1B] Of Byte;
    end;
  IRP_SETTINGS = _IRP_SETTINGS;
  PIRP_SETTINGS = ^IRP_SETTINGS;

  _FASTIO_SETTINGS = Record
    Settings : Array [0..Ord(FastIoMax) - 1] Of Byte;
    end;
  FASTIO_SETTINGS = _FASTIO_SETTINGS;
  PFASTIO_SETTINGS = ^FASTIO_SETTINGS;

  _DRIVER_MONITOR_SETTINGS = Record
    MonitorNewDevices : ByteBool;
    MonitorAddDevice : ByteBool;
    MonitorStartIo : ByteBool;
    MonitorUnload : ByteBool;
    MonitorFastIo : ByteBool;
    MonitorIRP : ByteBool;
    MonitorIRPCompletion : ByteBool;
    MonitorData : ByteBool;
    IRPSettings : IRP_SETTINGS;
    FastIoSettings : FASTIO_SETTINGS;
    end;
  DRIVER_MONITOR_SETTINGS = _DRIVER_MONITOR_SETTINGS;
  PDRIVER_MONITOR_SETTINGS = ^DRIVER_MONITOR_SETTINGS;

  (** Contains information about one driver hooked by the IRPMon driver. *)
  _HOOKED_DRIVER_UMINFO = Record
	  (** ID of the object, used within the IRPMon driver. *)
    ObjectId : Pointer;
	  (** Address of driver's DRIVER_OBJECT structure. *)
	  DriverObject : Pointer;
	  (** Name of the driver. Cannot be NULL. *)
	  DriverName : PWideChar;
	  (* Length of the driver name, in bytes. The value does not include the
	   terminating null-character. *)
	  DriverNameLen : Cardinal;
	  (** Indicates whether the IRPMon driver monitors events related to the target
	    driver. If set to TRUE, the information about the events is stored in the
		  IRPMon Event Queue. *)
    MonitoringEnabled : ByteBool;
    DeviceExtensionHooks : ByteBool;
    MonitorSettings : DRIVER_MONITOR_SETTINGS;
	  (** Number of devices, monitored by the IRPMon driver (not including the new ones). *)
    NumberOfHookedDevices : Cardinal;
	  (** An array of @link(HOOKED_DEVICE_UMINFO) structures, each representing one
	   monitored device. *)
    HookedDevices : PHOOKED_DEVICE_UMINFO;
    end;
  HOOKED_DRIVER_UMINFO = _HOOKED_DRIVER_UMINFO;
  PHOOKED_DRIVER_UMINFO = ^HOOKED_DRIVER_UMINFO;

  (** Stores information about one device object existing in the system. *)
  _IRPMON_DEVICE_INFO = Record
	  (** Object address (address of its DEVICE_OBJECT structure). *)
    DeviceObject : Pointer;
	  (** Address of device object attached to this one. NULL value means no device
	    is attached. *)
	  AttachedDevice : Pointer;
	  (** Name of the device. If the device has no name, this field points to a null
	    character. Will never be NULL. *)
    Name : PWideChar;
    end;
  IRPMON_DEVICE_INFO = _IRPMON_DEVICE_INFO;
  PIRPMON_DEVICE_INFO = ^IRPMON_DEVICE_INFO;
  PPIRPMON_DEVICE_INFO = ^PIRPMON_DEVICE_INFO;

  (** Stores information about one driver existing in the system. *)
  _IRPMON_DRIVER_INFO = Record
	  (** Address of the driver (its DRIVER_OBJECT structure). *)
    DriverObject : Pointer;
	  (** Driver name, will never be NULL. *)
    DriverName : PWideChar;
	  (** Number of device objects owned by the driver. *)
    DeviceCount : Cardinal;
	  (** Pointer to an array of pointers to @link(IRPMON_DEVICE_INFO) each
	    containing information about one device owned by the driver. Number
		  of entries is reflected by the DeviceCount member. *)
    Devices : PPIRPMON_DEVICE_INFO;
    end;
  IRPMON_DRIVER_INFO = _IRPMON_DRIVER_INFO;
  PIRPMON_DRIVER_INFO = ^IRPMON_DRIVER_INFO;
  PPIRPMON_DRIVER_INFO = ^PIRPMON_DRIVER_INFO;

  _CLASS_WATCH_RECORD = Record
	  ClassGuid : Packed Array [0..15] Of Byte;
	  ClassGuidString : PWideChar;
	  UpperFilter : Byte;
	  Beginning : Byte;
    end;
  CLASS_WATCH_RECORD = _CLASS_WATCH_RECORD;
  PCLASS_WATCH_RECORD = ^CLASS_WATCH_RECORD;

  _DRIVER_NAME_WATCH_RECORD = Record
    MonitorSettings : DRIVER_MONITOR_SETTINGS;
	  DriverName : PWideChar;
    end;
  DRIVER_NAME_WATCH_RECORD = _DRIVER_NAME_WATCH_RECORD;
  PDRIVER_NAME_WATCH_RECORD = ^DRIVER_NAME_WATCH_RECORD;

  _EIRPMonConnectorType = (
    ictNone,
    ictDevice,
    ictNetwork
  );
  EIRPMonConnectorType = _EIRPMonConnectorType;
  PEIRPMonConnectorType = ^EIRPMonConnectorType;

  _IRPMON_INIT_INFO = Record
    ConnectionType : EIRPMonConnectorType;
    Case EIRPMonConnectorType Of
      ictDevice : (
        DeviceName : PWideChar;
        );
      ictNetwork : (
          NetworkHost : PWideChar;
          NetworkPort : PWideChar;
          AddressFamily : Word;
        );
    end;
  IRPMON_INIT_INFO = _IRPMON_INIT_INFO;
  PIRPMON_INIT_INFO = ^IRPMON_INIT_INFO;

  _IRPMNDRV_SETTINGS = Record
    ReqQueueLastRequestId : UInt32;
	  ReqQueueLength : UInt32;
    ReqQueueNonPagedLength : UInt32;
    ReqQueuePagedLength : UInt32;
	  ReqQueueConnected : ByteBool;
	  ReqQueueClearOnDisconnect : ByteBool;
	  ReqQueueCollectWhenDisconnected : ByteBool;
	  ProcessEventsCollect : ByteBool;
	  FileObjectEventsCollect : ByteBool;
	  DriverSnapshotEventsCollect : ByteBool;
	  ProcessEmulateOnConnect : ByteBool;
	  DriverSnapshotOnConnect : ByteBool;
    DataStripThreshold : Cardinal;
    StripData : ByteBool;
    end;
  IRPMNDRV_SETTINGS = _IRPMNDRV_SETTINGS;
  PIRPMNDRV_SETTINGS = ^IRPMNDRV_SETTINGS;

  ERequestFilterOperator = (
    rfoEquals,
    rfoLowerEquals,
    rfoGreaterEquals,
    rfoLower,
    rfoGreater,
    rfoContains,
    rfoBegins,
    rfoEnds,
    rfoAlwaysTrue,
    rfoDLLDecider
  );

  EFilterAction = (
    ffaHighlight, // If the request is included
    ffaInclude,
    ffaExclude,
    ffaPassToFilter
  );


Function IRPMonDllDriverHooksEnumerate(Var AHookedDrivers:PHOOKED_DRIVER_UMINFO; Var ACount:Cardinal):Cardinal; StdCall;
Procedure IRPMonDllDriverHooksFree(AHookedDrivers:PHOOKED_DRIVER_UMINFO; ACount:Cardinal); StdCall;

Function IRPMonDllHookDriver(ADriverName:PWideChar; Var AMonitorSettings:DRIVER_MONITOR_SETTINGS; ADeviceExtensionHook:ByteBool; Var ADriverHandle:THandle; Var AObjectId:Pointer):Cardinal; StdCall;
Function IRPMonDllDriverStartMonitoring(ADriverhandle:THandle):Cardinal; StdCall;
Function IRPMonDllDriverStopMonitoring(ADriverhandle:THandle):Cardinal; StdCall;
Function IRPMonDllDriverSetInfo(ADriverHandle:THandle; Var ASettings:DRIVER_MONITOR_SETTINGS):Cardinal; StdCall;
Function IRPMonDllUnhookDriver(ADriverHandle:THandle):Cardinal; StdCall;
Function IRPMonDllHookDeviceByName(ADeviceName:PWideChar; Var AHookHandle:THandle; Var AObjectId:Pointer):Cardinal; StdCall;
Function IRPMonDllHookDeviceByAddress(ADeviceObject:Pointer; Var AHookHandle:THandle; Var AObjectId:Pointer):Cardinal; StdCall;
Function IRPMonDllUnhookDevice(AHookHandle:THandle):Cardinal; StdCall;
Function IRPMonDllHookedDeviceGetInfo(AHandle:THandle; AIRPSettings:PByte; AFastIOSettings:PByte; Var AMonitoringEnabled:ByteBool):Cardinal; StdCall;
Function IRPMonDllHookedDeviceSetInfo(AHandle:THandle; AIRPSettings:PByte; AFastIOSettings:PByte; AMonitoringEnabled:ByteBool):Cardinal; StdCall;
Function IRPMonDllHookedDriverGetInfo(AHandle:THandle; Var ASettings:DRIVER_MONITOR_SETTINGS; Var AMonitoringEnabled:ByteBool):Cardinal; StdCall;

Function IRPMonDllSnapshotRetrieve(Var ADriverInfo:PPIRPMON_DRIVER_INFO; Var ACount:Cardinal):Cardinal; StdCall;
Procedure IRPMonDllSnapshotFree(ADriverInfo:PPIRPMON_DRIVER_INFO; ACount:Cardinal); StdCall;

Function IRPMonDllConnect:Cardinal; StdCall;
Function IRPMonDllDisconnect:Cardinal; StdCall;
Function IRPMonDllGetRequest(ARequest:PREQUEST_HEADER; ASize:Cardinal):Cardinal; StdCall;

Function IRPMonDllOpenHookedDriver(AObjectId:Pointer; Var AHandle:THandle):Cardinal; StdCall;
Function IRPMonDllCloseHookedDriverHandle(AHandle:THandle):Cardinal; StdCall;
Function IRPMonDllOpenHookedDevice(AObjectId:Pointer; Var AHandle:THandle):Cardinal; StdCall;
Function IRPMonDllCloseHookedDeviceHandle(AHandle:THandle):Cardinal; StdCall;

Function IRPMonDllClassWatchRegister(AClassGuid:PWideChar; AUpperFilter:ByteBool; ABeginning:ByteBool):Cardinal; StdCall;
Function IRPMonDllClassWatchUnregister(AClassGuid:PWideChar; AUpperFilter:ByteBool; ABeginning:ByteBool):Cardinal; StdCall;
Function IRPMonDllClassWatchEnum(Var AArray:PCLASS_WATCH_RECORD; Var ACount:Cardinal):Cardinal; StdCall;
Procedure IRPMonDllClassWatchEnumFree(AArray:PCLASS_WATCH_RECORD; ACount:Cardinal); StdCall;

Function IRPMonDllDriverNameWatchRegister(ADriverName:PWideChar; Var AMonitorSettings:DRIVER_MONITOR_SETTINGS):Cardinal; StdCall;
Function IRPMonDllDriverNameWatchUnregister(ADriverName:PWideChar):Cardinal; StdCall;
Function IRPMonDllDriverNameWatchEnum(Var AArray:PDRIVER_NAME_WATCH_RECORD; Var ACount:Cardinal):Cardinal; StdCall;
Procedure IRPMonDllDriverNameWatchEnumFree(AArray:PDRIVER_NAME_WATCH_RECORD; ACount:Cardinal); StdCall;

Function IRPMonDllEmulateDriverDevices:Cardinal; StdCall;
Function IRPMonDllEmulateProcesses:Cardinal; StdCall;

Function IRPMonDllSettingsQuery(Var ASettings:IRPMNDRV_SETTINGS):Cardinal; StdCall;
Function IRPMonDllSettingsSet(Var ASettings:IRPMNDRV_SETTINGS; ASave:ByteBool):Cardinal; StdCall;

Function RequestCopy(AHeader:PREQUEST_HEADER):PREQUEST_HEADER; Cdecl;
Function RequestMemoryAlloc(ASize:NativeUInt):PREQUEST_HEADER; Cdecl;
Procedure RequestMemoryFree(AHeader:PREQUEST_HEADER); Cdecl;
Function RequestGetSize(ARequest:PREQUEST_HEADER):Cardinal; Cdecl;

Function IRPMonDllInitialized:LongBool; StdCall;
Function IRPMonDllInitialize(Var AInfo:IRPMON_INIT_INFO):Cardinal; StdCall;
Procedure IRPMonDllFinalize; StdCall;

Implementation

Const
  LibraryName = 'irpmondll.dll';
  RequestsLibraryName = 'requests.dll';


Function IRPMonDllDriverHooksEnumerate(Var AHookedDrivers:PHOOKED_DRIVER_UMINFO; Var ACount:Cardinal):Cardinal; StdCall; External LibraryName;
Procedure IRPMonDllDriverHooksFree(AHookedDrivers:PHOOKED_DRIVER_UMINFO; ACount:Cardinal); StdCall; External LibraryName;
